build/log/idf_py_stdout_output_29380
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/7] Building C object esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj
FAILED: esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/app_wifi/include -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/esp_wifi/include -I/home/ynghia/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ynghia/esp/esp-idf/components/esp_event/include -I/home/ynghia/esp/esp-idf/components/esp_phy/include -I/home/ynghia/esp/esp-idf/components/esp_phy/esp32/include -I/home/ynghia/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj -MF esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj.d -o esp-idf/app_wifi/CMakeFiles/__idf_app_wifi.dir/app_wifi.c.obj   -c ../components/app_wifi/app_wifi.c
In file included from /home/ynghia/esp/esp-idf/components/esp_wifi/include/esp_wifi.h:54,
                 from ../components/app_wifi/app_wifi.c:4:
../components/app_wifi/app_wifi.c: In function 'init_wifi':
../components/app_wifi/app_wifi.c:15:58: error: 'wifi_event_handler' undeclared (first use in this function); did you mean 'esp_event_handler_t'?
   15 |                                                         &wifi_event_handler, NULL, NULL));
      |                                                          ^~~~~~~~~~~~~~~~~~
/home/ynghia/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
../components/app_wifi/app_wifi.c:15:58: note: each undeclared identifier is reported only once for each function it appears in
   15 |                                                         &wifi_event_handler, NULL, NULL));
      |                                                          ^~~~~~~~~~~~~~~~~~
/home/ynghia/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
../components/app_wifi/app_wifi.c:19:21: error: 'EXAMPLE_ESP_WIFI_SSID' undeclared (first use in this function); did you mean 'ESP_ERR_WIFI_SSID'?
   19 |             .ssid = EXAMPLE_ESP_WIFI_SSID,
      |                     ^~~~~~~~~~~~~~~~~~~~~
      |                     ESP_ERR_WIFI_SSID
../components/app_wifi/app_wifi.c:21:24: error: 'EXAMPLE_ESP_WIFI_CHANNEL' undeclared (first use in this function)
   21 |             .channel = EXAMPLE_ESP_WIFI_CHANNEL,
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:22:25: error: 'EXAMPLE_ESP_WIFI_PASS' undeclared (first use in this function)
   22 |             .password = EXAMPLE_ESP_WIFI_PASS,
      |                         ^~~~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:23:31: error: 'EXAMPLE_MAX_STA_CONN' undeclared (first use in this function)
   23 |             .max_connection = EXAMPLE_MAX_STA_CONN,
      |                               ^~~~~~~~~~~~~~~~~~~~
../components/app_wifi/app_wifi.c:44:5: error: implicit declaration of function 'ESP_LOGI'; did you mean 'ESP_OK'? [-Werror=implicit-function-declaration]
   44 |     ESP_LOGI(TAG, "wifi_init_softap finished. SSID:%s password:%s channel:%d",
      |     ^~~~~~~~
      |     ESP_OK
../components/app_wifi/app_wifi.c:44:14: error: 'TAG' undeclared (first use in this function)
   44 |     ESP_LOGI(TAG, "wifi_init_softap finished. SSID:%s password:%s channel:%d",
      |              ^~~
../components/app_wifi/app_wifi.c: At top level:
../components/app_wifi/app_wifi.c:47:1: error: expected identifier or '(' before '}' token
   47 | }
      | ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
